--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                                     <a class="nav-link tm-nav-link" href="Skills.html">Skills</a>
                                 </li> 
                                 <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="https://github.com/cm-amos">Github</a>
+                                    <a class="nav-link tm-nav-link" href="https://github.com/4ouR04">Github</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link tm-nav-link" href="contact.html">Contact</a>
