--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <footer class="tm-site-footer text-right">
                     <p class="mb-0">Copyright 2021 cm-amosIPtech. 
                     
-                    | Designer: <a rel="nofollow" target="_blank" href="https://github.com/cm-amos" class="tm-text-link">Amos Mwongela</a></p>
+                    | Designer: <a rel="nofollow" target="_blank" href="https://github.com/4ouR04" class="tm-text-link">Amos Mwongela</a></p>
                 </footer>
             </div>  
         </div>
