--- a/contact.html
+++ b/contact.html
@@ -91,9 +91,9 @@
             </div>        
             <div class="tm-col-right tm-col-footer">
                 <footer class="tm-site-footer text-right">
-                    <p class="mb-0">Copyright 2021 cm-amosIPtech. 
+                    <p class="mb-0">Copyright 2021 4ouR04 
                     
-                    | Designer: <a rel="nofollow" target="_blank" href="https://github.com/cm-amos" class="tm-text-link">Amos Mwongela</a></p>
+                    | Designer: <a rel="nofollow" target="_blank" href="https://github.com/4ouR04" class="tm-text-link">Amos Mwongela</a></p>
                 </footer>
             </div>  
         </div>
