Update index github url

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>        
             <div class="tm-col-right tm-col-footer">
                 <footer class="tm-site-footer text-right">
-                    <p class="mb-0">Copyright 2021 cm-amosIPtech. 
+                    <p class="mb-0">Copyright 2021 4ouR04 
                     
                     | Designer: <a rel="nofollow" target="_blank" href="https://github.com/4ouR04" class="tm-text-link">Amos Mwongela</a></p>
                 </footer>
